--- a/UniversalApp/Phone.storyboard
+++ b/UniversalApp/Phone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="w53-Ea-dL4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XHS-wf-E2b">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -29,10 +29,29 @@
                         <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <viewLayoutGuide key="safeArea" id="LW9-Da-yNw"/>
                     </view>
+                    <navigationItem key="navigationItem" id="m1D-d7-hDD"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GT4-7q-fiL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="938.39999999999998" y="-229.83508245877064"/>
+            <point key="canvasLocation" x="1277.5999999999999" y="-229.83508245877064"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="0C7-z3-8DA">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="XHS-wf-E2b" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="uRD-AQ-Syv">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="w53-Ea-dL4" kind="relationship" relationship="rootViewController" id="FTD-to-GUz"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Iy1-5E-Rei" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="279" y="-230"/>
         </scene>
     </scenes>
 </document>
