--- a/UniversalApp/UniversalApp/Base.lproj/Pad.storyboard
+++ b/UniversalApp/UniversalApp/Base.lproj/Pad.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eoN-S7-nQZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hWH-DE-oOd">
     <device id="ipad12_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -29,10 +29,29 @@
                         <color key="backgroundColor" red="1" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                         <viewLayoutGuide key="safeArea" id="YUb-Ol-Zyh"/>
                     </view>
+                    <navigationItem key="navigationItem" id="fZH-Jy-Hyw"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wd2-XW-SQM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="938" y="437"/>
+            <point key="canvasLocation" x="1061.71875" y="436.60322108345531"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="lx2-24-R4o">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hWH-DE-oOd" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="W3a-UR-PyQ">
+                        <rect key="frame" x="0.0" y="20" width="1024" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="eoN-S7-nQZ" kind="relationship" relationship="rootViewController" id="a7a-fv-CtN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jug-X6-ysE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-25" y="419"/>
         </scene>
     </scenes>
 </document>
