--- a/UniversalApp/UniversalApp/Base.lproj/Main.storyboard
+++ b/UniversalApp/UniversalApp/Base.lproj/Main.storyboard
@@ -30,15 +30,18 @@
                                     <action selector="launchStoryboard:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rnC-5I-Jhp"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Launch iPhone ?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MRT-Sn-t2G">
-                                <rect key="frame" x="90" y="66" width="195" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Launch iPhone ?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MRT-Sn-t2G">
+                                <rect key="frame" x="124.5" y="66" width="126" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="MRT-Sn-t2G" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="aFr-A8-8vg"/>
+                            <constraint firstItem="MRT-Sn-t2G" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="46" id="hOy-zC-FMV"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
@@ -49,7 +52,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="32.799999999999997" y="32.833583208395808"/>
+            <point key="canvasLocation" x="-450" y="57"/>
         </scene>
         <!--Phone-->
         <scene sceneID="6LY-aI-IqP">
